--- a/scss/_utils.scss
+++ b/scss/_utils.scss
@@ -39,4 +39,136 @@
     background-color: #f4f4f4;
     color: #333;
   }
+
+  &-outline {
+    background-color: transparent;
+    border: 1px solid #fff;
+
+    &:hover {
+      transform: scale(0.98);
+    }
+  }
+}
+
+// Backgrounds
+.bg {
+  &-primary {
+    background-color: $primary-color;
+    color: #fff;
+  }
+
+  &-secondary {
+    background-color: $secondary-color;
+    color: #fff;
+  }
+
+  &-dark {
+    background-color: #333;
+    color: #fff;
+  }
+
+  &-light {
+    background-color: #f4f4f4;
+    color: #333;
+  }
+}
+
+// Flex items
+.flex-items {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+
+  & > div {
+    padding: 20px;
+  }
+}
+
+// Flex columns
+.flex-columns {
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+
+    .column-1,
+    .column-2 {
+      height: 100%;
+    }
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .column-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 30px;
+  }
+
+  h2 {
+    font-size: 40px;
+    font-weight: 100;
+  }
+
+  h4 {
+    margin-bottom: 10px;
+  }
+
+  p {
+    margin: 20px 0;
+  }
+
+  &.flex-reverse {
+    .row {
+      flex-direction: row-reverse;
+    }
+  }
+}
+
+// Section header
+.section-header {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  h2 {
+    font-size: 40px;
+    margin: 20px 0;
+  }
+}
+
+// Section padding
+.section-padding {
+  padding: 20px 20px 40px;
+}
+
+// Flex grid
+.flex-grid {
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+
+    .column {
+      flex: 24%;
+      max-width: 25%;
+      padding: 0 4px;
+    }
+  }
 }
