--- a/scss/main.scss
+++ b/scss/main.scss
@@ -59,6 +59,7 @@ img {
     position: fixed;
     top: 0px;
     padding: 0 30px;
+    z-index: 11;
 
     a {
       color: #fff;
@@ -112,5 +113,30 @@ img {
 
   * {
     z-index: 10;
+  }
+}
+
+// Icons
+.icons {
+  padding: 30px;
+
+  h3 {
+    font-weight: bold;
+    margin: 15px;
+  }
+
+  i {
+    background-color: $primary-color;
+    color: #fff;
+    padding: 1rem;
+    border-radius: 50%;
+    margin-bottom: 15px;
+  }
+}
+
+// Cases
+.cases {
+  img:hover {
+    opacity: 0.7;
   }
 }
