--- a/scss/main.scss
+++ b/scss/main.scss
@@ -140,3 +140,109 @@ img {
     opacity: 0.7;
   }
 }
+
+// Team
+.team {
+  img {
+    border-radius: 50%;
+  }
+}
+
+// Callback form
+.callback-form {
+  width: 100%;
+  padding: 20px 0;
+
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+
+  .form-control {
+    margin-bottom: 15px;
+  }
+
+  input {
+    width: 100%;
+    padding: 4px;
+    height: 40px;
+    border: #f5f5f5 1px solid;
+
+    &:focus {
+      outline-color: $primary-color;
+    }
+  }
+
+  .btn {
+    padding: 12px;
+    margin-top: 20px;
+  }
+}
+
+// Footer
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 200px;
+
+  a {
+    color: #fff;
+
+    &:hover {
+      color: $primary-color;
+    }
+  }
+
+  .social > * {
+    margin-right: 30px;
+  }
+}
+
+// Mobile
+@media (max-width: 768px) {
+  .hero {
+    .navbar {
+      flex-direction: column;
+      height: 120px;
+      padding: 20px;
+
+      a {
+        padding: 10px 10px;
+      }
+    }
+    .content {
+      h1 {
+        font-size: 50px;
+      }
+    }
+  }
+
+  .flex-items {
+    flex-direction: column;
+  }
+
+  .flex-columns {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
+
+  .flex-grid {
+    .row {
+      .column {
+        flex: 100%;
+        max-width: 100%;
+      }
+    }
+  }
+
+  .team {
+    img {
+      width: 70%;
+    }
+  }
+}
