--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,6 +60,7 @@ img {
     top: 0px;
     padding: 0 30px;
     z-index: 11;
+    transition: 0.5s;
 
     a {
       color: #fff;
@@ -77,6 +78,10 @@ img {
 
     .logo {
       font-weight: 400;
+    }
+
+    &.top {
+      background: transparent;
     }
   }
 
@@ -113,6 +118,11 @@ img {
 
   * {
     z-index: 10;
+  }
+
+  &.blog {
+    background: url('../img/home/blog.jpg') no-repeat center center/cover;
+    height: 30vh;
   }
 }
 
@@ -176,6 +186,29 @@ img {
   .btn {
     padding: 12px;
     margin-top: 20px;
+  }
+}
+
+// Post
+.post {
+  padding: 50px 30px;
+
+  h2 {
+    font-size: 40px;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    border-bottom: #ccc solid 1px;
+  }
+
+  .meta {
+    margin-bottom: 30px;
+  }
+
+  img {
+    width: 300px;
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto 30px;
   }
 }
 
